<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient_back">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/padding_5"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="Registration"
                android:textColor="@color/white"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/txtFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/createaccount_yourfirstname"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColorHint="@color/greyshade"
                    android:textSize="14dp"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/createaccount_emailaddress"
                android:id="@+id/txtEmail"
                android:padding="15dp"
                android:textColorHint="@color/greyshade"
                android:textSize="14dp"
                android:layout_margin="10dp"
                android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/createaccount_createpassword"
                android:id="@+id/txtPassword"
                android:padding="15dp"
                android:textColorHint="@color/greyshade"
                android:textSize="14dp"
                android:layout_margin="10dp"/>

            </android.support.design.widget.TextInputLayout>


         <!--   <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:hint="Password"
                    android:id="@+id/c_pass"
                    android:padding="15dp"
                    android:textColorHint="@color/greyshade"
                    android:textSize="14dp"
                    android:layout_margin="10dp"/>

            </android.support.design.widget.TextInputLayout>-->
         <!--   <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:hint="Confirm Password"
                    android:id="@+id/confirm_pass"
                    android:padding="15dp"
                    android:textColorHint="@color/greyshade"
                    android:textSize="14dp"
                    android:layout_margin="10dp"/>

            </android.support.design.widget.TextInputLayout>-->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:inputType="number"
                        android:maxLength="13"
                        android:hint="@string/createaccount_yourphone"
                        android:id="@+id/txtPhone"
                        android:padding="15dp"
                        android:layout_margin="10dp"
                        android:textColorHint="@color/greyshade"
                        android:textSize="14dp"
                        android:textColor="@color/white"/>
                </android.support.design.widget.TextInputLayout>


            </FrameLayout>

       <!--     <CheckBox
                android:id="@+id/check_referral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Referral ?"
                android:layout_marginLeft="@dimen/padding_15"
                android:layout_marginRight="@dimen/padding_10"
                android:textColor="@color/gray"/>-->


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="Referral code"
                    android:paddingLeft="@dimen/padding_15"
                    android:paddingRight="@dimen/padding_15"
                    android:paddingBottom="@dimen/padding_15"
                    android:id="@+id/edit_referral"
                    android:visibility="gone"
                    android:textColorHint="@color/greyshade"
                    android:textSize="14dp"/>

            </android.support.design.widget.TextInputLayout>




            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/register_new"
                android:id="@+id/button"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/my_gradient_drawable"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="12dp"
                android:textAlignment="center"
                android:text="@string/createaccount_termsandprivacypolicy"
                android:id="@+id/textView"
                android:textColor="@color/white"/>
            <LinearLayout
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="12dp"
                    android:text="@string/createaccount_our"
                    android:id="@+id/textView2"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:text="@string/createaccount_terms"
                    android:id="@+id/txtTerms"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/createaccount_and"
                    android:id="@+id/textView4"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:text="@string/createaccount_privacypolicy"
                    android:id="@+id/txtPrivacypolicy"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
