<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackground">


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CANCELLATION REASON"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                android:padding="@dimen/padding_10"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/padding_10"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:background="@color/view_bg"></View>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:orientation="vertical"
                    android:id="@+id/radioSex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_10">

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="@dimen/padding_5"
                        android:text="@string/cancel1"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="match_parent"

                        android:padding="@dimen/padding_5"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel2"
                        android:textSize="15sp" />
                    <RadioButton
                        android:id="@+id/radio3"
                        android:padding="@dimen/padding_5"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/cancel3"
                        android:textSize="15sp" />
                    <RadioButton
                        android:id="@+id/radio4"
                        android:padding="@dimen/padding_5"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/cancel4"
                        android:textSize="15sp" />
                    <RadioButton
                        android:id="@+id/radio5"
                        android:padding="@dimen/padding_5"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/cancel5"
                        android:textSize="15sp" />
                    <RadioButton
                        android:id="@+id/radio6"
                        android:padding="@dimen/padding_5"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/cancel6"
                        android:textSize="15sp" />

                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/padding_10"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:background="@color/view_bg"></View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="@dimen/padding_10"
                android:weightSum="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="not now"
                    android:textColor="@color/grey"
                    android:gravity="end"
                    android:layout_marginRight="@dimen/padding_5"
                    android:textSize="15sp"
                    android:padding="@dimen/padding_10"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="cancel test"
                    android:gravity="start"
                    android:padding="@dimen/padding_10"
                    android:layout_marginLeft="@dimen/padding_5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>